chandeliers-lus/tests/compile_fail/ui/tc/extern/wrong-out-node.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/ui/tc/extern/wrong-out-node.rs:16:17
   |
16 |     extern node wrong_step_sig(i, j : int) returns (b: bool);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^--------
   |                 |                                   |
   |                 |                                   expected `Nillable<bool>` because of return type
   |                 expected `Nillable<bool>`, found `Nillable<f64>`
   |
   = note: expected enum `Nillable<bool>`
              found enum `Nillable<f64>`
